# chawk

./: .gitignore  Cargo.toml  Makefile  README.md  test_chumsky.awk
examples/: average_temp.awk  print_arith.awk  print_line.awk  short_data.txt
src/: ast.rs  chawk.pest  interpreter.rs  lib.rs  main.rs  parser.rs  parser_chumsky.rs  raw_parser.rs  tester.rs
test/: average_temp.awk.output  begin_end.awk  begin_end.awk.output  compare.awk  compare.awk.output  empty_lines.awk  empty_lines.awk.output  expr_pattern.awk  expr_pattern.awk.output  factorial.awk  factorial.awk.output  factorial_scope.awk  factorial_scope.awk.output  for.awk  for.awk.output  for_optional.awk  for_optional.awk.output  for_scope.chawk  for_scope.chawk.output  function.awk  function.awk.output  function_return.awk  function_return.awk.output  if.awk  if.awk.output  if_scope.chawk  if_scope.chawk.output  local_in_block.chawk  local_in_block.chawk.output  logical_and.awk  logical_and.awk.output  logical_and_lazy.awk  logical_and_lazy.awk.output  logical_or.awk  logical_or.awk.output  logical_or_lazy.awk  logical_or_lazy.awk.output  modulo.awk  modulo.awk.output  print_arith.awk  (+16 more)
