[package]
name = "chawk"
version = "0.1.0"
edition = "2021"
default-run = "chawk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
clap = { version = "3.1.8", features = ["cargo"] }
atty = "0.2" # Allows us to know if stdin is redirected
anyhow = "1.0"

[[bin]]
name = "raw-parser"
path = "src/raw_parser.rs"

[[bin]]
name = "parser"
path = "src/parser.rs"

[[bin]]
name = "tester"
path = "src/tester.rs"
