[package]
name = "chawk"
version = "0.1.0"
edition = "2021"
default-run = "chawk"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0" # Provides parser generator to create concrete syntax tree
pest_derive = "2.0"
 # For parsing command-line arguments, with auto-generation of help
clap = { version = "3.1.8", features = ["cargo"] }
atty = "0.2" # Allows us to know if stdin is redirected
anyhow = "1.0" # For easier error handling in executables
regex = "1.0" # For PCRE-like (but not quite PCRE) regular expressions

[[bin]]
name = "raw-parser"
path = "src/bin/raw_parser.rs"

[[bin]]
name = "parser"
path = "src/bin/parser.rs"

[[bin]]
name = "tester"
path = "src/bin/tester.rs"

[[bin]]
name = "chawk"
path = "src/bin/main.rs"
